만14세  보호자 인증관련 기능 구현
